scripts/nullness/original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8.txt
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Theoriestunde.java:12: error: [initialization.fields.uninitialized] the constructor does not initialize fields: fahrlehrerin
	public Theoriestunde(int thema, Date beginn) {
	       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:9: error: [initialization.field.uninitialized] the default constructor does not initialize field lehrerinID
	private String lehrerinID;
	               ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:10: error: [initialization.field.uninitialized] the default constructor does not initialize field name
	private String name;
	               ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:11: error: [initialization.field.uninitialized] the default constructor does not initialize field zugewiesenes_auto
	private Auto zugewiesenes_auto;
	             ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field theoriestunde
	private ArrayList<Theoriestunde> theoriestunde;
	                                 ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field fahrstunde
	private ArrayList<Fahrstunde> fahrstunde;
	                              ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Auto.java:8: error: [initialization.fields.uninitialized] the constructor does not initialize fields: fahrlehrerindaten
	public Auto(String kennzeichen) {
	       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/Systemereignis.java:32: error: [initialization.fields.uninitialized] the constructor does not initialize fields: ID, text
	public Systemereignis(Nachricht nachricht) {
	       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrschueler.java:20: error: [initialization.fields.uninitialized] the constructor does not initialize fields: fahrlehrerindaten
	public Fahrschueler(String name, String anschrift) {
	       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:12: error: [initialization.static.field.uninitialized] static field instance not initialized
	private static Ressourcenverwaltung instance;
	                                    ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:31: error: [assignment] incompatible types in assignment.
		instance=null;
		         ^
  found   : null (NullType)
  required: @Initialized @NonNull Ressourcenverwaltung
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:76: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Auto
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:94: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Fahrlehrerindaten
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:110: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Fahrschueler
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:288: error: [argument] incompatible argument for parameter nachricht of Systemereignis constructor.
		Systemereignis systemereignis = new Systemereignis(null);
		                                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Nachricht
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:13: error: [initialization.static.field.uninitialized] static field instance not initialized
	private static Unterrichtsverwaltung instance;
	                                     ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:32: error: [assignment] incompatible types in assignment.
		instance=null;
		         ^
  found   : null (NullType)
  required: @Initialized @NonNull Unterrichtsverwaltung
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:44: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Fahrschueler
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:55: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Theoriestunde
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:74: error: [argument] incompatible argument for parameter nachricht of Systemereignis constructor.
		Systemereignis systemereignis = new Systemereignis(null);
		                                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Nachricht
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:13: error: [initialization.static.field.uninitialized] static field instance not initialized
	private static Pruefungsverwaltung instance;
	                                   ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:18: error: [initialization.fields.uninitialized] the constructor does not initialize fields: fahrpruefung_bestanden_fahrschueler
	public Pruefungsverwaltung() {
	       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:31: error: [assignment] incompatible types in assignment.
		instance=null;
		         ^
  found   : null (NullType)
  required: @Initialized @NonNull Pruefungsverwaltung
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:91: error: [return] incompatible types in return.
		else return null;
		            ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Systemereignis
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:11: error: [initialization.field.uninitialized] the default constructor does not initialize field fahrlehrerinBoundary
	private IFahrlehrerinBoundary fahrlehrerinBoundary;
	                              ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field sekretaerBoundary
	private ISekretaerBoundary sekretaerBoundary;
	                           ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field aktuellesDatum
	private Date aktuellesDatum;
	             ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
27 errors
